...
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="@dimen/app_name_size" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:fontFamily="sans-serif"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="@dimen/general_padding"
                    android:textColorHint="@color/colorAccent"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_text_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
...
                    android:textColorHint="@color/colorAccent"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_padding"
                android:padding="@dimen/general_padding"
                android:background="@drawable/rounded_button_transparent"
...
