...
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="text_view_signup">Don\'t have account? Sign Up</string>
    <string name="login_button">Login</string>
    <string name="text_view_login">Login Here</string>
    <string name="logout">Logout</string>

    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
...
    <string name="category">Category</string>
    <string name="abcd_journal">ABCD JOURNAL</string>
    <string name="a">A</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="alarm">Alarm</string>
    <string name="submit">Submit</string>
    <string name="alarm2">Alarm</string>
    <string name="hour_minute">HH:MM</string>
    <string name="day_month_year">DD/MM/YYYY</string>
    <string name="journal_name">JOURNAL Name</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
...
