...
        android:layout_height="@dimen/layout_big_padding"
        android:layout_width="@dimen/layout_big_padding"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:theme="@style/AppTheme.FabTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/fab_draw" />
...
